--- a/4_Lung_Cancer_prediction.ipynb
+++ b/4_Lung_Cancer_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMD9Q9RT+jz8VQ2w3KPBfbJ",
+      "authorship_tag": "ABX9TyPS3wTM177VVfWtd33SxAX7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2418,29 +2418,24 @@
         "print(top_influential_factors)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "24jT5wUKsC52",
-        "outputId": "cee04945-aeb6-4471-dd01-17ff1185db42"
+        "id": "24jT5wUKsC52"
       },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Top 5 Influential Factors:\n",
-            "LUNG_CANCER_YES      0.626760\n",
-            "ALCOHOL CONSUMING    0.063342\n",
-            "AGE                  0.043822\n",
-            "PEER_PRESSURE        0.038732\n",
-            "YELLOW_FINGERS       0.037486\n",
-            "dtype: float64\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Top  Influential Factors:\n",
+        "\n",
+        "- ALCOHOL CONSUMING    0.063342\n",
+        "- AGE                  0.043822\n",
+        "- PEER_PRESSURE        0.038732\n",
+        "- YELLOW_FINGERS       0.037486"
+      ],
+      "metadata": {
+        "id": "sHEcQONMh_m4"
+      }
     },
     {
       "cell_type": "code",
@@ -3134,7 +3129,7 @@
       "source": [
         "# ```ENHANCEMENTS 2:```\n",
         "\n",
-        "# Improved Correlation Matrix Visualization:"
+        "# Improved  Visualization:"
       ],
       "metadata": {
         "id": "1iTvNt7Qa0qZ"
